@@ -77,6 +77,17 @@ rEGKexOIAgJyv5XlepgKq%2FOtfuYCWNiII0zZq6zFy3AzbsrbPQUl5liHa2DD7wHIRODmqwoWOIqOr1
 kjpxAd4IGypZIKAImlpNTU2botgF0lx4j7AdwjlwYGLoE0Ku6FLplUiip9%2FQ60nYTuF0MATpLjzZf%2BPwO7skbZu9XXPx06\
 ALdoPYZXfz8LrJvrfGDxMbo2R0z87AEarZAQYXjM%2BtHnUeLyIkdyL%2B%2Fn8TX1uqP%2Bw%2BHls6HVdIr2nEoH4nD0iS4b\
 VvtYbBpYucvX29GvM5A5W%2FgtwADAPaeC0Xi4UgBAAAAAElFTkSuQmCC") !important;}
+a.gamefox-edit-link{background-image:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCA\
+YAAAAf8%2F9hAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAhxJREFUeNpiZC5lZgADRoY%2BIKnPQBy4\
+yPCfoQjOE1NQYAitr0%2F7TyRgLmHeB8QMIMwINSPt7t27M%2B%2Fdu8cAwqmpqQz3n%2F%2FAarWiFCcDazHLfiDTCUUioLIy\
+8%2B%2B%2Ff%2F%2F%2F%2FP2LF4PUMOcz7wdiBhDG6oLE5GSGh89%2FYneBNCcDez7rASDTEUXCo7Aw5xfQhh%2B%2Ff%2BPF\
+IDXMmcwHgJghzYwJuwtiExIYHj77hdUFSnJcDJyZrAeXb2VwUHj2HyHhkJ5e8P3Pn%2F%2Bff%2FzAi0FqzH1Zzt9jZFx%2FjJ\
+HRgQXmgrllZf1H9u8HuyA8Lo7hydPfWF3Axf6agf%2BnpKBifbLB5cZGIbiEeWxsyedfv%2F6%2F%2B%2FoVJ374YNf%2FNRs2\
+%2FP%2F%2B%2Fft%2FNympvvkMDG5YwyA4OprhyZM%2FKDb%2F%2BnyM4f2DiQx21kYMciFzHv298de36927S3AFuoGBFR9%2F\
+%2Fvz%2F6tMnDHzv3o7%2FBzd5%2FP%2F%2BrPL%2FmrkO%2F1WjmC5zGnIy%2BGsyYo8F%2F4gIhqdP%2FoIlfn8%2BzvDh0S\
+QGexsjhjXrjjIYO1cx6JR5HQNKWf8%2FgRQLvLq67Z%2BAIfwOGNIw%2FOjp5f%2BHtniCbV4NtPnq9R3%2FQWoY7RhPMgoyQv\
+MgAwMoJKUY1BgqGXiAJBIIVGSUWrfwhlRZpcbnLTf%2BP7%2F%2BluETWOILwy0gbAeynoEM4AQ5AIhZsMTa02Rvxi3vvzLMXH\
+fg%2Fzk0OVAofwYIMACF0LhPPmZXZgAAAABJRU5ErkJggg%3D%3D") !important;}
 
 .message [id^="p"] a:not(.name):not(.gamefox-message-detail-number):hover{
 background-color:rgba(0,0,0,.5) !important;
