@@ -1,6 +1,7 @@
 2011-02-xx:
     * version 0.7.12
     * Fix quoting and filtering with left message data
+    * Fix "edit" link with message link icons stylesheet
 
 2011-02-05:
     * version 0.7.11
